--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <ul>
             <a href="#"><li>Sobre</li></a>
-            <a href="#"><li>especilidades</li></a>
+            <a href="#"><li>ePECIALIDADES</li></a>
             <a href="#"><li>projetos</li></a>
             <a href="#"><li>aaaa</li></a>
         </ul>
@@ -43,7 +43,7 @@
     <div class="container-esp">
 
       <DIV class="HS">
-        <h2>MINHAS  </h2> <H2 id="h2-color">ESPECILIDADES</H2>
+        <h2>MINHAS  </h2> <H2 id="h2-color">ESPECIALIDADES</H2>
      </DIV>
 
 
