--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="#"><img src="./img/image-PhotoRoom.png-PhotoRoom (1).png" alt="logo" id="logo-header"></a>
 
         <ul>
-            <a href="#"><li>Sobre</li></a>
-            <a href="#"><li>ePECIALIDADES</li></a>
+            <a href="#"><li>Inicio</li></a>
+            <a href="#"><li>epecialidades</li></a>
             <a href="#"><li>projetos</li></a>
             <a href="#"><li>aaaa</li></a>
         </ul>
@@ -73,9 +73,26 @@
                      di vel error dicta perspiciatis nulla!</p>
             </div>
         </div>
+
+        <button class="btn-caixa">Clique aqui para outros projetos.</button>
+
+
+
     </div>
 
 
     
+        <div class="container-slider">
+            <button id="prev-button"><img src="./img/right-arrow.png" alt=""></button>
+            <div class="container-img">
+                <img src="./img/instagram.png" alt="ping" class="slider on" > 
+                <img src="./img/netflix.png" alt="ping" class="slider">
+                <img src="./img/epic.png" alt="ping" class="slider">
+            </div>
+            <button id="next-button"><img src="./img/right-arrow.png" alt=""></button>
+        </div>
+
+
+ <script src="./script.js"></script>   
 </body>
 </html>
