--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#"><li>Inicio</li></a>
             <a href="#"><li>epecialidades</li></a>
             <a href="#"><li>projetos</li></a>
-            <a href="#"><li>aaaa</li></a>
+            <a href="#"><li>Sobre mim</li></a>
         </ul>
 
         <a href="#"><button>Contato</button></a>
@@ -81,6 +81,10 @@
     </div>
 
 
+    <div class="porjetos-h2">
+        <h2>PROJETOS</h2>
+    </div>
+
     
         <div class="container-slider">
             <button id="prev-button"><img src="./img/right-arrow.png" alt=""></button>
@@ -90,7 +94,48 @@
                 <img src="./img/epic.png" alt="ping" class="slider">
             </div>
             <button id="next-button"><img src="./img/right-arrow.png" alt=""></button>
+
+            <div class="img-proj">
+                <div>
+                    <a href="https://flavio062.github.io/Netflix/" target="_blank"><img src="./img/netflix.png" alt=""></a>
+                    <a href="https://flavio062.github.io/Instagram-Html-e-css/" target="_blank"><img src="./img/instagram.png" alt=""></a>
+                </div>
+                <div class="div-2">
+                    <a href="https://flavio062.github.io/page-epic-games-i/" target="_blank"> <img src="./img/epic.png" alt=""></a>
+                    <img src="./img/em breve.jpg" alt="">
+                </div>
+            </div>
         </div>
+
+           <div class="textsobremim">
+            <h2>SOBRE </h2> <H2 class="mim-color">MIM</H2>
+           </div>
+
+        <div class="container-sobre">
+            <div class="foto">
+                <img src="./img/perfil.jpg" alt="" class="perfil">
+                <div class="redes">
+                    <a href="https://github.com/Flavio062" target="_blank"><img src="./img/github.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/flavio-henrique-78aa8b261/" target="_blank"><img src="./img/linkedin.png" alt=""></a>
+                    <a href="https://wa.me/5562982668582" target="_blank"><img src="./img/whatsapp.png" alt=""></a>
+                </div>
+            </div>
+            <div class="text-sobremim">
+                <p>Meu nome é Flávio, um entusiasta e estudante dedicado de programação,<br>
+                   focado principalmente em HTML, CSS e JavaScript. Apaixonado por computadores e tecnologia,<br>
+                   busco constantemente aprimorar minhas habilidades no desenvolvimento web para criar experiências digitais inovadoras e funcionais. <br>
+                    Com uma sólida compreensão dos fundamentos da programação e um comprometimento constante com a aprendizagem, <br>
+                     estou preparado para enfrentar desafios e contribuir de forma significativa em projetos de desenvolvimento de software. <br>
+                      Sou motivado, proativo e estou sempre em busca de novas oportunidades para expandir meu conhecimento e aplicar minhas habilidades técnicas.</p>
+            </div>
+        </div>
+
+        <footer>
+           <p> Site criado totalmente por mim, alguns sites de projetos podem ter sido copiado apenas para estudo! </p>
+           <div>
+           <p class="email">Email</p> <p>: flaviopnc123@gmail.com  </p> <p class="wap"> WhatsApp</p> <p>:5562982668582</p>
+           </div>
+        </footer>
 
 
  <script src="./script.js"></script>   
