--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </a>
         </ul>
 
-        <a href="#"><button>Contato</button></a>
+        <a href="./segundo.html"><button>Contato</button></a>
     </header>
 
 
@@ -63,7 +63,7 @@
                 estou em constante aprendizado para enfrentar novos desafios.<BR>
                 Vamos criar algo incrível juntos!</p>
 
-            <button>Entre em Contato</button>
+            <a href="./segundo.html"><button>Entre em Contato</button></a>
         </div>
         <div class="img1"><img src="./img/image-PhotoRoom.png-PhotoRoom (1).png" alt=""></div>
     </div>
@@ -104,7 +104,7 @@
             </div>
         </div>
 
-        <button class="btn-caixa">Clique aqui para outros projetos.</button>
+        <a href="./segundo.html"><button class="btn-caixa">Clique aqui para outros projetos.</button></a>
 
 
 
