--- a/segundo.html
+++ b/segundo.html
@@ -15,7 +15,7 @@
             <div><img src="./img/perfil.jpg" alt="" id="img-perfil"></div>
             <div class="msg-text">
                 <img src="./img/quote.png" alt="" class="aspas">
-                <p>Olá,<br>
+                <p class="text-digit">Olá,<br>
                     Agradeço muito pelo seu interesse em entrar em contato comigo! 
                     Se você tiver alguma dúvida, ideia ou projeto em mente, ficarei feliz em conversar.
                      Você pode me encontrar nas redes sociais ou enviar um e-mail Estou animado para colaborar e 
@@ -45,9 +45,11 @@
             </div>
             <div class="redes">
                 <img src="./img/gmail.png" alt="">
-                <a><button id="emails">flaviopnc123@gmail.com</button>
+                <div class="email-co">flaviopnc123@gmail.com</div>
             </div>
-            <div class="voltar"></div>
+            <div class="voltar">
+                <a href="./index.html"><button>Voltar</button></a>
+            </div>
 
         </div>
     </div>
