--- a/segundo.html
+++ b/segundo.html
@@ -29,7 +29,7 @@
         <div class="contato">
             <div class="redes">
                 <img src="./img/whatsapp.png" alt="">
-                <a href="#">    <button>Whatsapp</button></a>
+                <a href="https://wa.me/5562982668582" target="_blank">    <button>Whatsapp</button></a>
             </div>
             <div class="redes">
                 <img src="./img/instagram2.png" alt="">
